--- a/app.json
+++ b/app.json
@@ -7,6 +7,10 @@
             "description": "V2Ray UUID",
             "value": "ad806487-2d26-4636-98b6-ab85cc8521f7"
         }
+        "PORT": {
+            "description": "V2Ray PORT",
+            "value": "1080"
+        }
     },
     "website": "https://ibcl.us/Heroku-V2Ray_20191014/",
     "repository": "https://github.com/bclswl0827/v2ray-heroku",
